--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         color: red; 
         font-size: x-large;
       }
+      
+      #footer {
+      	color: gray;
+      	font-size: x-small;
+ 	position: absolute;
+ 	bottom: 0%;
+ 	width: 100%;
+ 	text-align: center;
+      }
     </style>
   </head>
   
@@ -1142,6 +1151,10 @@ Code for Saitama    URL:
     </div> 
     
   </div>
+  
+  <hr/>
+  <div id="footer">©立正大学　地球環境科学部　環境システム学科　後藤研究室</div>
+  
   <!-- JavaScript plugins (requires jQuery) -->
   <script src="js/jquery-1.10.2.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
