--- a/index.html
+++ b/index.html
@@ -1130,10 +1130,8 @@ Code for Saitama    URL:
                 <option value="資源布">ワンピース</option>
     
               </select>
-          <br><br>
-          <button>調べる</button>
-          <br><br>
-          <div>上記のゴミ分類は<div id = hinmoku2></div>です</div>
+          <p><button>調べる</button></p>
+          <p>上記のゴミ分類は<div id = hinmoku2></div>です</div></p>
           
         　<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
           <script>
