--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
   <div class="accordion" id="accordion3">
     
   <div id="map"></div> <!--地図を表示する領域-->
-
-   <div id="judge"></div> <!--坂戸市なのか判定する領域-->
+  <div id="judge"></div> <!--坂戸市なのか判定する領域-->
+  <br/><br/>
+  <input type="button" value="現在地を調べる" onclick="getPosition()">
     
     <div class="accordion-group-top">
       <div class="accordion-heading">
