--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
   <select class="form-control" id="select_area"></select>
   <div class="accordion" id="accordion3">
     
+  <p><input type="button" value="現在地を調べる" onclick="getPosition()"></p>
   <div id="map"></div> <!--地図を表示する領域-->
   <div id="judge"></div> <!--坂戸市なのか判定する領域-->
-  <br/><br/>
-  <input type="button" value="現在地を調べる" onclick="getPosition()">
     
     <div class="accordion-group-top">
       <div class="accordion-heading">
