--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <select class="form-control" id="select_area"></select>
   <div class="accordion" id="accordion3">
     
-  <p><input type="button" value="現在地を調べる" onclick="getPosition()"></p>
+  <input type="button" value="現在地を調べる" onclick="getPosition()">
   <div id="map"></div> <!--地図を表示する領域-->
   <div id="judge"></div> <!--坂戸市なのか判定する領域-->
     
