--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
   <div id="accordion"></div>
   <select class="form-control" id="select_area"></select>
   <div class="accordion" id="accordion3">
-    
-  <input type="button" value="現在地を調べる" onclick="getPosition()">
+  <div style="text-align: center">  
+    <input type="button" value="現在地を調べる" onclick="getPosition()">
+  </div>
   <div id="map"></div> <!--地図を表示する領域-->
   <div id="judge"></div> <!--坂戸市なのか判定する領域-->
     
