--- a/index.html
+++ b/index.html
@@ -107,9 +107,7 @@ Code for Saitama    URL:
         <div class="accordion-inner">
           <div id="help">
             
-          <select id = "hinmoku">
-            <option value="" selected>ごみの分類を選択してください</option>
-          </select>
+          <select id = "hinmoku"></select>
           <br/><br/>
           <div>上記のゴミ分類は<div id ="hinmoku2"></div>です</div>
           
