--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@ Code for Saitama    URL:
         <div class="accordion-inner">
           <div id="help">
             
-          <select id = "hinmoku"></select>
+          <select id = "hinmoku">
+            <option>ごみの種類を選んでください</option>
+          </select>
           <br/><br/>
           <div>上記のゴミ分類は<div id ="hinmoku2"></div>です</div>
           
