--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div style="text-align: center">  
     <input type="button" value="現在地を調べる" onclick="getPosition()">
   </div>
-  <div id="map"></div> <!--地図を表示する領域-->
+  <div id="map" style="text-align: center"></div> <!--地図を表示する領域-->
   <div id="judge"></div> <!--坂戸市なのか判定する領域-->
     
     <div class="accordion-group-top">
