--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         color: red; 
         font-size: x-large;
       }
-      #hinmoku {text-align: center}
+      #judge {text-align: center}
       #footer {
       	color: gray;
       	font-size: x-small;
