--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
         color: red; 
         font-size: x-large;
       }
-      #judge {text-align: center}
+      #judge {
+        text-align: center;
+        font-size: large;
+      }
       #footer {
       	color: gray;
       	font-size: x-small;
- 	position: absolute;
- 	bottom: 0%;
- 	width: 100%;
- 	text-align: center;
+        position: absolute;
+        bottom: 0%;
+        width: 100%;
+        text-align: center;
       }
     </style>
   </head>
