--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       #judge {
         text-align: center;
         font-size: large;
+        font-weight: bold;
       }
       #footer {
       	color: gray;
