--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           
           <!--  ごみ分類を調べる-->
           <select id = "hinmoku">
- <!--           <option>ごみの種類を選んでください</option> -->
+            <option>ごみの種類を選んでください</option>
           </select>
           <br/><br/>
           <div>上記のごみの種類は<div id ="hinmoku2"></div>です</div>
