--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
           <div id="help">
           
           <!--  ごみ分類を調べる-->
-          <select id = "hinmoku">
-            <option>ごみの種類を選んでください</option>
-          </select>
+          <select id = "hinmoku"></select>
           <br/><br/>
           <div>上記のごみの種類は<div id ="hinmoku2"></div>です</div>
           
