--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div id="help">
           
           <!--  ごみ分類を調べる-->
-          <select id = "hinmoku"></select>
+          <div id = "hinmoku"></div>
           <br/><br/>
           <div>上記のごみの種類は<div id ="hinmoku2"></div>です</div>
           
