--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/custom.css" rel="stylesheet" media="screen" />
  
     <style type = "text/css">
-      #hinmoku {max-width: 80%}
+      #hinmoku {width: 50%}
       #hinmoku2 {
         color: red; 
         font-size: x-large;
