--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/custom.css" rel="stylesheet" media="screen" />
  
     <style type = "text/css">
-      #hinmoku {width: 50%}
+      #hinmoku {max-width: 100%}
       #hinmoku2 {
         color: red; 
         font-size: x-large;
@@ -112,7 +112,7 @@
           <div id="help">
           
           <!--  ごみ分類を調べる-->
-          <div id = "hinmoku"></div>
+          <select id = "hinmoku"></select>
           <br/><br/>
           <div>上記のごみの種類は<div id ="hinmoku2"></div>です</div>
           
