--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
  
     <style type = "text/css">
     	#map {
-			  width: 100%; /*マップの幅*/
-			  height: 80%; /*マップの高さ*/
-		  }
+	  width: 200px; /*マップの幅*/
+ 	  height: 200px; /*マップの高さ*/
+	}
       #hinmoku {max-width: 100%}
       #hinmoku2 {
         color: red; 
