--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  
     <style type = "text/css">
     	#map {
-	  width: 200px; /*マップの幅*/
+	  width: max-width: 100%; /*マップの幅*/
  	  height: 200px; /*マップの高さ*/
 	}
       #hinmoku {max-width: 100%}
