--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style type = "text/css">
     	#map {
 	  width: max-width: 100%; /*マップの幅*/
- 	  height: 200px; /*マップの高さ*/
+ 	  height: max-height: 100%; /*マップの高さ*/
 	}
       #hinmoku {max-width: 100%}
       #hinmoku2 {
