--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     
     <div class="accordion-group-top">
       <div class="accordion-heading">
-        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">地図表示</a>
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">地図・住所表示</a>
       </div>
       <div id="collapse3_2" class="accordion-body collapse">
         <div class="accordion-inner">
