--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
  
     <style type = "text/css">
       #map {
-    	width: max-width: 100%; /*マップの幅*/
-    	height: max-height: 100%; /*マップの高さ*/
+    	 max-width: 100%; /*マップの幅*/
+    	 max-height: none; /*マップの高さ*/
       }
       #hinmoku {max-width: 100%}
       #hinmoku2 {
