--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <p>リンク</p> 
           <a href="http://www.city.sakado.lg.jp/23,0,207,764.html" target="_blank" style="color: blue; text-decoration: underline;">坂戸市　ごみ、分別収集</a> 
           
-          /div>
+          </div>
         </div>
       </div>
     </div>
