--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     	 max-height: none; /*マップの高さ*/
       }
       #hinmoku {max-width: 100%}
-      #hinmoku2 {
-        color: red; 
-        font-size: x-large;
-      }
+      #hinmoku2 { color: red; font-size: x-large;}
     </style>
   </head>
   
