--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
           <div id="help">
             
           <p>リンク</p> 
-          <a href="http://www.city.sakado.lg.jp/23,0,207,764.html" target="_blank" style="color: blue; text-decoration: underline;">坂戸市　ごみ、分別収集</a>
-          <a href="https://github.com/sakado-city/5374/blob/gh-pages/HINMOKU.md" target="_blank" style="color: blue; text-decoration: underline;">説明</a>
+          <p><a href="http://www.city.sakado.lg.jp/23,0,207,764.html" target="_blank" style="color: blue; text-decoration: underline;">坂戸市　ごみ、分別収集</a></p>
+          <p><a href="https://github.com/sakado-city/5374/blob/gh-pages/HINMOKU.md" target="_blank" style="color: blue; text-decoration: underline;"><pre>ごみの種類を表示させる\nソースを公開</pre></a></p>
           
           </div>
         </div>
