--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <br/><br/><br/>
   <br/><br/><br/>
   <br/><br/><br/>
-  <div id="footer">©立正大学　地球環境科学部　環境システム学科　後藤研究室</div>
+  <div style="text-align: center">©立正大学　地球環境科学部　環境システム学科　後藤研究室</div>
   
   <!-- JavaScript plugins (requires jQuery) -->
   <script src="js/jquery-1.10.2.min.js"></script>
