リンクURLの変更・追加

--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
             <div id="help">
               
             <p>リンク</p> 
-            <p><a href="http://www.city.sakado.lg.jp/23,0,207,764.html" target="_blank" style="color: blue; text-decoration: underline;">坂戸市　ごみ、分別収集</a></p>
-            <p><a href="http://sakado-city.github.io/hinmoku-search/" target="_blank" style="color: blue; text-decoration: underline;">ごみの種類を絞り込んで検索する</a></p>
+            <p><a href="http://www.city.sakado.lg.jp/" target="_blank" style="color: blue; text-decoration: underline;">坂戸市 ホームページ</a></p>
+            <p><a href="http://www.city.sakado.lg.jp/23,0,207,764.html" target="_blank" style="color: blue; text-decoration: underline;">坂戸市 ごみ、分別収集</a></p>
+            <p><a href="http://5374.jp/" target="_blank" style="color: blue; text-decoration: underline;">5374.jp ホームページ</a></p>
+            <p><a href=https://github.com/codeforkanazawa-org/5374" target="_blank" style="color: blue; text-decoration: underline;">5374を作成する</a></p>
             
             </div>
           </div>
