絞り込み検索　リンクの追加

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
             <select id ="hinmoku"></select>
             <br/><br/>
             <div>上記のごみの種類は<div id ="hinmoku2"></div>です</div>
+            <p><a href="http://hinmoku.github.io/hinmoku-search/" target="_blank" style="color: blue; text-decoration: underline;">絞り込み検索</a></p>
+            <diV>より詳細にゴミの種類を調べることが出来ます</diV>
             
             </div>
           </div>
