--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
             <select id ="hinmoku"></select>
             <br/><br/>
             <div>上記のごみの種類は<div id ="hinmoku2"></div>です</div>
-            <p><a href="http://hinmoku.github.io/hinmoku-search/" target="_blank" style="color: blue; text-decoration: underline;">絞り込み検索</a></p>
-            <diV>より詳細にゴミの種類を調べることが出来ます</diV>
+            <br/>
+            <div><a href="http://hinmoku.github.io/hinmoku-search/" target="_blank" style="color: blue; text-decoration: underline;">絞り込み検索</a></div>
+            <diV>を使うと、より詳細にゴミの種類を調べることが出来ます</diV>
             
             </div>
           </div>
@@ -149,7 +150,7 @@
             <p><a href="http://www.city.sakado.lg.jp/" target="_blank" style="color: blue; text-decoration: underline;">坂戸市 ホームページ</a></p>
             <p><a href="http://www.city.sakado.lg.jp/23,0,207,764.html" target="_blank" style="color: blue; text-decoration: underline;">坂戸市 ごみ、分別収集</a></p>
             <p><a href="http://5374.jp/" target="_blank" style="color: blue; text-decoration: underline;">5374.jp ホームページ</a></p>
-            <p><a href=https://github.com/codeforkanazawa-org/5374" target="_blank" style="color: blue; text-decoration: underline;">5374を作成する</a></p>
+            <p><a href="https://github.com/codeforkanazawa-org/5374" target="_blank" style="color: blue; text-decoration: underline;">5374を作成する</a></p>
             
             </div>
           </div>
