--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <br/><br/>
             <div>上記のごみの種類は<div id ="hinmoku2"></div>です</div>
             <br/>
-            <div><a href="http://hinmoku.github.io/hinmoku-search/" target="_blank" style="color:blue; text-decoration:underline; font-size:large; text-align:center;">絞り込み検索</a></div>
+            <div><a href="http://hinmoku.github.io/hinmoku-search/" target="_blank" style="color:blue; text-decoration:underline; font-size:large;">絞り込み検索</a></div>
             <diV>を使うと、より詳細にゴミの種類を調べることが出来ます</diV>
             
             </div>
