--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
     <br/>
     <div style="text-align: center">  
       <input type="button" value="現在地を調べる" onclick="getPosition()">
+      <div id="judge"></div> <!--地域を判定する領域-->
     </div>
     
-    <div id="judge"></div> <!--地域を判定する領域-->
-  
     <div class="accordion" id="accordion3">
       <div class="accordion-group-top">
         <div class="accordion-heading">
@@ -107,7 +106,7 @@
             <div>上記のごみの種類は<div id ="hinmoku2"></div>です</div>
             <br/>
             <div><a href="http://hinmoku.github.io/hinmoku-search/" target="_blank" style="color:blue; text-decoration:underline; font-size:large;">絞り込み検索</a></div>
-            <diV>を使うと、より詳細にゴミの種類を調べることが出来ます</diV>
+            <diV>を使うと、より詳細にゴミの種類を調べることが出来ます（別リンクに移動します）</diV>
             
             </div>
           </div>
