--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 私たちは、デザインをして、ソフトウェアコードを書き、課題を解決するサービスを完成させるのです。さらに、そのサービスを提供し続ける力も持ちます。<br /><br />
                 CfKは市民のための組織です。行政や民間企業の影響を受けずに中立・公益の立場から物事を判断するよう心がけています。<br /><br />
                 公式サイト<br />
-                <a href="http://www.codeforkanazawa.org/" style="color: #FF0000;text-decoration: underline;">http://www.codeforkanazawa.org/</a>
+                <a href="http://www.codeforkanazawa.org/" style="color:#FF0000; text-decoration:underline;">http://www.codeforkanazawa.org/</a>
                 <br>5374.jp<br />
-                <a href="http://5374.jp/index.html" target="_blank" style="color: #FF0000;text-decoration: underline;">http://5374.jp/index.html</a></p>
+                <a href="http://5374.jp/index.html" target="_blank" style="color:#FF0000; text-decoration:underline;">http://5374.jp/index.html</a></p>
               </div>
               <div style="border:solid 1px #0fff00;"></div><br>
                 <div id="ris">
@@ -81,7 +81,7 @@
                 Code for Saitama    URL:
                 <a href="https://www.facebook.com/groups/186097664924714/" target="_blank"style=" color: #FF0000;text-decoration: underline;">https://www.facebook.com/groups...</a><br>
                 立正大学　地球環境科学部　環境システム学科　<br>
-                後藤研究室（〒360-0194　熊谷市万吉1700）<a href="https://twitter.com/gotshin" target="_blank"style=" color: #0000FF;text-decoration: underline;">@gotshin</a>
+                後藤研究室（〒360-0194　熊谷市万吉1700）<a href="https://twitter.com/gotshin" target="_blank" style="color:#0000FF; text-decoration:underline;">@gotshin</a>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
             <div>上記のごみの種類は<div id ="hinmoku2"></div>です</div>
             <br/>
             <div><a href="http://hinmoku.github.io/hinmoku-search/" target="_blank" style="color:blue; text-decoration:underline; font-size:large;">絞り込み検索</a></div>
-            <diV>を使うと、より詳細にゴミの種類を調べることが出来ます（別リンクに移動します）</diV>
+            <div>を使うと、より詳細にゴミの種類を調べることが出来ます（別リンクに移動します）</div>
             
             </div>
           </div>
@@ -148,8 +148,8 @@
             <p>リンク</p> 
             <p><a href="http://www.city.sakado.lg.jp/" target="_blank" style="color: blue; text-decoration: underline;">坂戸市 ホームページ</a></p>
             <p><a href="http://www.city.sakado.lg.jp/23,0,207,764.html" target="_blank" style="color: blue; text-decoration: underline;">坂戸市 ごみ、分別収集</a></p>
-            <p><a href="http://5374.jp/" target="_blank" style="color: blue; text-decoration: underline;">5374.jp ホームページ</a></p>
-            <p><a href="https://github.com/codeforkanazawa-org/5374" target="_blank" style="color: blue; text-decoration: underline;">5374を作成する</a></p>
+            <p><a href="http://5374.jp/" target="_blank" style="color:blue; text-decoration:underline;">5374.jp ホームページ</a></p>
+            <p><a href="https://github.com/codeforkanazawa-org/5374" target="_blank" style="color:blue; text-decoration:underline;">5374を作成する</a></p>
             
             </div>
           </div>
